--- a/src/app/user-kitten/user-kitten.component.html
+++ b/src/app/user-kitten/user-kitten.component.html
@@ -2,5 +2,5 @@
     <li>{{element.name}} </li>
     <li>{{element.race}} </li>
     <li>{{element.born}} </li>
-    <li>{{element.picture}} </li>
+    <img src="{{element.picture}}" alt="{{element.name}}">
 </div>
